# datum_pump_bot

./: .gitignore  .test.env  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
bot/: app.py  bot.py  config.py
tests/: conftest.py  my_account_test.session  requirements.txt  test_app.py  test_bot.py  test_config.py
